# forta-rs

./: Cargo.toml  README.md
proto/: network.forta.rs
src/: client.rs  lib.rs  server.rs  server_types.rs  types.rs
src/server/: main.rs  types.rs
