[package]
name = "forta-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agent-server"
path = "src/server/main.rs"

[[bin]]
name = "agent-client"
path = "src/client/main.rs"

[dependencies]
futures = "0.3.28"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
async-std = "*"

[build-dependencies]
tonic-build = "0.8.4"
